echo1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: echo1
  name: echo1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: echo1
  template:
    metadata:
      labels:
        app: echo1
    spec:
      containers:
      - image: eurogig/clust3rf8ck:0.1
        name: echo1
        resources: {}
---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: echo1
  name: echo1
spec:
  ports:
  - name: 80-80
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: echo1
